# todo-phase1

./: .env.example  .gitignore  README.md  demo.py  main.py  pyproject.toml
.specify/memory/: devops_feature.md
.specify/web/: architecture.md
backend/: __init__.py  cli.py  database.py  main.py  models.py  storage.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
src/: cli.py  main.py  models.py  storage.py
tests/: __init__.py  test_cli.py  test_models.py  test_storage.py
