[project]
name = "todo1"
version = "0.1.0"
description = "Dev-Ops Ticket Management - CLI and Web API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[all]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "typer>=0.21.0",
]

[project.scripts]
todo = "backend.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
